--- a/public-html/index.html
+++ b/public-html/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<script type="text/javascript" src="https://dbcls.rois.ac.jp/DBCLS-common-header-footer/common-header-and-footer/script/common-header-and-footer.js" style="display: block" id="common-header-and-footer__script"></script>
+<!-- <script type="text/javascript" src="https://dbcls.rois.ac.jp/DBCLS-common-header-footer/common-header-and-footer/script/common-header-and-footer.js" style="display: block" id="common-header-and-footer__script"></script> -->
 <!-- <style> -->
 <!-- #dbcls-common-footer .footer__common .footer__wrapper { width: 950px; } -->
 <!-- </style> -->
