modify link of template libraries

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -60,7 +60,7 @@ analysis</b> of biological data on the Semantic Web platform.
 
 
 <h3> SPANG template library </h3>
-<a href=http://purl.org/net/spang/library/ class="link_title">Browse the template libraries</a>
+<a href=library/ class="link_title">Browse the template libraries</a>
 <!-- <br><br> -->
 <!-- <a href=http://mbgd.genome.ad.jp/sparql/library/>MBGD template library</a> -->
 
